[package]
name = "steganography"
version = "0.1.0"
edition = "2021"
authors = ["Marcos Traverso"]
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
clap = { version = "4.5.4", features = ["derive"] }
